AUTOMAKE_OPTIONS = foreign

helpfdir = $(pkgdatadir)/help/opers

dist_helpf_DATA = accept cmode etrace ison list map nick ping resv stats trace    \
                 unxline whois admin connect gline gungline join locops modlist  \
                 notice pong rkline svinfo uhelp user whowas away cryptlink hash \
                 kick lusers modload omotd post rxline testgecos umode           \
                 userhost xline capab die help kill modrestart oper privmsg      \
                 server testline undline users challenge dline index kline       \
                 modunload operwall quit set testmask ungline version client     \
                 eob info knock motd part rehash sjoin time unkline wallops      \
                 close error invite links names pass restart squit topic         \
                 unresv who

helpf: $(dist_helpf_DATA)
