AUTOMAKE_OPTIONS = foreign

helpfdir = $(pkgdatadir)/help/opers

dist_helpf_DATA = accept cmode etrace ison list map nick ping resv stats trace  \
                 unxline whois admin connect gline gungline join locops module  \
                 notice pong svinfo uhelp user whowas away hash                 \
                 kick lusers omotd post testgecos umode                         \
                 userhost xline capab die help kill oper privmsg                \
                 server testline undline users challenge dline index kline      \
                 operwall quit set testmask ungline version                     \
                 eob info knock motd part rehash sjoin time unkline wallops     \
                 close error invite links names pass restart squit topic        \
                 unresv who

helpf: $(dist_helpf_DATA)
