AM_CPPFLAGS = -I$(top_srcdir)/include
noinst_LTLIBRARIES = libio.la

libio_la_SOURCES =  base32.c      \
                    base32.h.h    \
                    dbuf.c        \
                    dbuf.h        \
                    event.c       \
                    event.h       \
                    hook.c        \
                    hook.h        \
                    io_getopt.c   \
                    io_getopt.h   \
                    irc_string.c  \
                    irc_string.h  \
                    list.c        \
                    list.h        \
                    log.c         \
                    log.h         \
                    match.c       \
                    misc.c        \
                    misc.h        \
                    memory.c      \
                    memory.h      \
                    patricia.c    \
                    patricia.h    \
                    rng_mt.c      \
                    rng_mt.h      \
                    sha3.c        \
                    sha3.h

libio_la_LIBADD = @LTLIBOBJS@
